--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,17 @@
         }
     ],
     "require": {
-        "symfony/dotenv": "^4.3"
+        "symfony/dotenv": "^4.3",
+        "rdlowrey/auryn": "^1.4",
+        "symfony/http-foundation": "^4.3"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/",
+            "Bootstrap\\": "bootstrap/"
+        }
     }
 }
