--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
         }
     ],
     "require": {
-        "symfony/dotenv": "^4.3",
         "rdlowrey/auryn": "^1.4",
-        "symfony/http-foundation": "^4.3"
+        "symfony/http-foundation": "^4.3",
+        "vlucas/phpdotenv": "^3.6",
+        "guzzlehttp/guzzle": "^6.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0"
@@ -20,7 +21,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Bootstrap\\": "bootstrap/"
+            "Kernal\\": "kernal/"
         }
     }
 }
