--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "require": {
+        "php": "^7.2.0",
         "rdlowrey/auryn": "^1.4",
         "symfony/http-foundation": "^4.3",
         "vlucas/phpdotenv": "^3.6",
@@ -21,7 +22,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Kernel\\": "kernel/"
+            "Kernel\\": "kernel/",
+            "Tests\\": "tests/"
         }
     }
 }
